--- a/Login.html
+++ b/Login.html
@@ -44,14 +44,14 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
-      href="../../assets/Mais Brasil Logo.png"
+      href="./assets/Mais Brasil Logo.png"
       type="image/png"
     />
   </head>
   <body>
     <div id="header">
       <div class="logo">
-        <img src="../../assets/Mais Brasil Logo.png" alt="" />
+        <img src="./assets/Mais Brasil Logo.png" alt="" />
 
         <div id="text">
           <!-- LEAGUE SPARTAN -->
@@ -70,16 +70,16 @@
       <div id="menu-lateral">
         <div>
           <a href="#" onclick="toggleMenu(false)"
-            ><img src="../../assets/pngwing.com.png" alt="Return"
+            ><img src="./assets/pngwing.com.png" alt="Return"
           /></a>
           <hr />
-          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
+          <a href="./src/ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
           <hr />
-          <a href="../TrabalheConosco/TrabalheConosco.html" target="_blank"><strong>Trabalhe conosco</strong></a>
+          <a href="./src/TrabalheConosco/TrabalheConosco.html" target="_blank"><strong>Trabalhe conosco</strong></a>
           <hr />
-          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
+          <a href="./src/ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
           <hr />
-          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
+          <img src="./assets/Mais Brasil Logo.png" alt="Logo" />
         </div>
       </div>
     </div>
@@ -109,7 +109,7 @@
           />
           <span class="lnr lnr-eye"></span>
         </div>
-        <a href="../singUpPage/singUp.html">Ainda não se inscreveu ?</a>
+        <a href="./src/singUpPage/singUp.html">Ainda não se inscreveu ?</a>
 
         <input type="submit" name="btn" id="btn" value="ENTRAR" />
       </form>
@@ -119,7 +119,7 @@
 
     <!-- test -->
     <footer>
-      <img src="../../assets/Mais Brasil Logo.png" alt="" />
+      <img src="./assets/Mais Brasil Logo.png" alt="" />
       <div class="feet">
         <div class="txt1">
           <h1>INICIO</h1>
@@ -142,15 +142,15 @@
         </div>
         <div class="btn_contact">
           <div class="contact">
-            <img src="../../assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
+            <img src="./assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
               href="#"
             ></a>
             <img
-              src="../../assets/Instagram_logo.png"
+              src="./assets/Instagram_logo.png"
               id="Instagram"
               alt=""
             /><a href="#"></a>
-            <img src="../../assets/facebook_logo.png" id="Facebook" alt="" /><a
+            <img src="./assets/facebook_logo.png" id="Facebook" alt="" /><a
               href="#"
             ></a>
           </div>
