--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
-
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -42,14 +44,14 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
-      href="../../assets/Mais Brasil Logo.png"
+      href="./assets/Mais Brasil Logo.png"
       type="image/png"
     />
   </head>
   <body>
     <div id="header">
       <div class="logo">
-        <img src="../../assets/Mais Brasil Logo.png" alt="" />
+        <img src="./assets/Mais Brasil Logo.png" alt="" />
 
         <div id="text">
           <!-- LEAGUE SPARTAN -->
@@ -68,27 +70,33 @@
       <div id="menu-lateral">
         <div>
           <a href="#" onclick="toggleMenu(false)"
-            ><img src="../../assets/pngwing.com.png" alt="Return"
+            ><img src="./assets/pngwing.com.png" alt="Return"
           /></a>
           <hr />
-          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
+          <a href="./src/ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
           <hr />
-          <a href="../TrabalheConosco/TrabalheConosco.html" target="_blank"><strong>Trabalhe conosco</strong></a>
+          <a href="./src/TrabalheConosco/TrabalheConosco.html" target="_blank"><strong>Trabalhe conosco</strong></a>
           <hr />
-          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
+          <a href="./src/ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
           <hr />
-          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
+          <img src="./assets/Mais Brasil Logo.png" alt="Logo" />
         </div>
       </div>
     </div>
 
-    <div id="Container">
-      <form id="Formulario" method="POST" action="/User/Insert">
+    <div id="form-container">
+      <form id="login-form">
         <!-- LEAGUE SPARTAN -->
-        <h2 id="login">FAÇA SEU CADASTRO:</h2>
+        <h2 id="login">FAÇA SEU LOGIN</h2>
         <div class="icons">
           <span class="material-symbols-outlined"> person </span>
-          <input type="email" name="email" id="email" placeholder="E-Mail:" />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="E-Mail:"
+            required
+          />
         </div>
         <div class="icons">
           <span class="material-symbols-outlined"> lock </span>
@@ -101,29 +109,17 @@
           />
           <span class="lnr lnr-eye"></span>
         </div>
-        <div class="icons">
-          <span class="material-symbols-outlined"> lock </span>
-          <input
-            type="password"
-            name="password"
-            id="password"
-            placeholder="Confirme sua senha:"
-            required
-          />
-          <span class="lnr lnr-eye"></span>
-        </div>
-        <a href="../loginPage/index.html">Já tem uma conta ? Faça login !</a>
+        <a href="./src/singUpPage/singUp.html">Ainda não se inscreveu ?</a>
 
-        <input type="submit" name="btn" id="btn" value="CADASTRAR" />
+        <input type="submit" name="btn" id="btn" value="ENTRAR" />
       </form>
     </div>
 
     <div id="imagem"></div>
 
-    <script src="scripts_singUp.js"></script>
     <!-- test -->
     <footer>
-      <img src="../../assets/Mais Brasil Logo.png" alt="" />
+      <img src="./assets/Mais Brasil Logo.png" alt="" />
       <div class="feet">
         <div class="txt1">
           <h1>INICIO</h1>
@@ -146,15 +142,15 @@
         </div>
         <div class="btn_contact">
           <div class="contact">
-            <img src="../../assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
+            <img src="./assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
               href="#"
             ></a>
             <img
-              src="../../assets/Instagram_logo.png"
+              src="./assets/Instagram_logo.png"
               id="Instagram"
               alt=""
             /><a href="#"></a>
-            <img src="../../assets/facebook_logo.png" id="Facebook" alt="" /><a
+            <img src="./assets/facebook_logo.png" id="Facebook" alt="" /><a
               href="#"
             ></a>
           </div>
@@ -162,5 +158,6 @@
         </div>
       </div>
     </footer>
+    <script src="scripts_login.js"></script>
   </body>
 </html>
