--- a/src/consultsPages/dados_User/dados_User.html
+++ b/src/consultsPages/dados_User/dados_User.html
@@ -148,7 +148,7 @@
               <label for="">Numero da casa:</label><br />
               <input type="text" placeholder="Digite o número da casa:"/><br />
               <label for="">Complemento:</label><br />
-              <input type="text" placeholder="Digite o nome do paciente:"/><br />
+              <input type="text" placeholder="Digite o complemento:"/><br />
             </div>
           </div>
           <input type="submit" name="AVANÇAR" id="urlRote_2" value="AVANÇAR" />
