--- a/src/crudMED/crud_MED.html
+++ b/src/crudMED/crud_MED.html
@@ -59,10 +59,25 @@
         <div class="btn_marcarConsulta">
         </div>
       </div>
-      <div class="pai" onclick="menu()">
+      <div class="pai" onclick="toggleMenu()">
         <div class="filha"></div>
         <div class="filha"></div>
         <div class="filha"></div>
+      </div>
+      <div id="menu-lateral">
+        <div>
+          <a href="#" onclick="toggleMenu(false)"
+            ><img src="../../assets/pngwing.com.png" alt="Return"
+          /></a>
+          <hr />
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
+          <hr />
+          <a href="../TrabalheConosco/TrabalheConosco.html" target="_blank"><strong>Trabalhe conosco</strong></a>
+          <hr />
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
+          <hr />
+          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
+        </div>
       </div>
     </div>
 <!--  -->
