--- a/src/crudSERV/crud_SERV.html
+++ b/src/crudSERV/crud_SERV.html
@@ -102,6 +102,8 @@
               </tr>
             </form>
             </table>
+            <div id="dynamic-table-container"></div>
+
           </div>
         </div>
         </div>
