--- a/src/crudPAC/crud_PAC.html
+++ b/src/crudPAC/crud_PAC.html
@@ -99,22 +99,23 @@
                 <td>AÇÃO</td>
               </tr>
               <tr>
-                <td class="td-main"><input type="text" id="cpf"></td>
-                <td class="td-main"><input type="text" id="rg"></td>
+                <td class="td-main"><input type="text" id="cpf" maxlength="15"></td>
+                <td class="td-main"><input type="text" id="rg" maxlength="15"></td>
                 <td class="td-main"><input type="date" id="dataNascimento"></td>
-                <td class="td-main"><input type="text" id="nome"></td>
-                <td class="td-main"><input type="text" id="numeroCasa"></td>
-                <td class="td-main"><input type="text" id="rua"></td>
-                <td class="td-main"><input type="text" id="bairro"></td>
-                <td class="td-main"><input type="text" id="cidade"></td>
-                <td class="td-main"><input type="text" id="cep"></td>
-                <td class="td-main"><input type="text" id="telefone"></td>
-                <td class="td-main"><input type="text" id="consulta"></td>
+                <td class="td-main"><input type="text" id="nome" maxlength="15"></td>
+                <td class="td-main"><input type="text" id="numeroCasa" maxlength="5"></td>
+                <td class="td-main"><input type="text" id="rua" maxlength="30"></td>
+                <td class="td-main"><input type="text" id="bairro" maxlength="30"></td>
+                <td class="td-main"><input type="text" id="cidade" maxlength="20"></td>
+                <td class="td-main"><input type="text" id="cep" maxlength="10"></td>
+                <td class="td-main"><input type="text" id="telefone" maxlength="14"></td>
+                <td class="td-main"><input type="text" id="consulta" maxlength="20"></td>
                 <td class="td-main"><a href="#">ATUALIZAR</td>
                 <td class="td-main"><a href="#">EXCLUIR</a></td>
                 <input type="submit" value="+ ADICIONAR" id="btnADC">
               </tr>
             </table>
+            <div id="dynamicTables"></div>
           </form>
           </div>
         </div>
