--- a/src/Configuracao/alterarDados/index.html
+++ b/src/Configuracao/alterarDados/index.html
@@ -73,14 +73,14 @@
               <label for=""
                 >Nivel de relacionamento com o dono(a) desta conta:</label
               ><br />
-              <select name="" id="" style="margin-top: 13px">
+              <select name="" id="select-sexo" style="margin-top: 13px">
                 <option value="">Selecione:</option>
                 <option value="">Amigo(a)</option>
                 <option value="">Parente(a)</option>
                 <option value="">Filho(a)</option></select
               ><br />
               <label for="">Nome do paciente:</label><br />
-              <input type="text" id="Nome" placeholder="Digite o nome do paciente:"/><br />
+              <input type="text" id="input-nome" placeholder="Digite o nome do paciente:"/><br />
               <label for="">Registro geral (RG):</label><br />
               <input type="text" id="RG" placeholder="Digite seu RG:"/><br />
               <label for="" >Cadastro de pessoa física (CPF):</label><br />
@@ -94,7 +94,7 @@
                 </div>
                 <div>
                   <label for="">Sexo:</label>
-                  <select id="select-sexo">
+                  <select id="select-sexo1">
                     <option value="">Selecione:</option>
                     <option value="">Masculino</option>
                     <option value="">Feminino</option>
@@ -105,17 +105,15 @@
             </div>
             <div id="L-2-form">
               <label for="">CEP:</label><br />
-              <input type="text" placeholder="Digite o seu CEP:"/><br />
+              <input type="text" id="CEP" placeholder="Digite o seu CEP:"/><br />
               <label for="">Cidade:</label><br />
-              <input type="text" placeholder="Digite o nome da sua cidade:"/><br />
+              <input type="text" id="cidade" placeholder="Digite o nome da sua cidade:"/><br />
               <label for="">Bairro:</label><br />
-              <input type="text" placeholder="Digite o nome do seu bairro:"/><br />
+              <input type="text" id="bairro" placeholder="Digite o nome do seu bairro:"/><br />
               <label for="">Rua:</label><br />
-              <input type="text" placeholder="Digite o nome da sua rua:"/><br />
+              <input type="text" id="rua" placeholder="Digite o nome da sua rua:"/><br />
               <label for="">Numero da casa:</label><br />
-              <input type="text" placeholder="Digite o número da casa:"/><br />
-              <label for="">Complemento:</label><br />
-              <input type="text" placeholder="Digite o nome do paciente:"/><br />
+              <input type="text" id="numero-casa" placeholder="Digite o número da casa:"/><br />
             </div>
           </div>
           <input type="submit" name="AVANÇAR" id="urlRote_2" value="AVANÇAR" />
