Updates in ADM screens

--- a/src/crudSERV/crud_SERV.html
+++ b/src/crudSERV/crud_SERV.html
@@ -94,10 +94,10 @@
               <tr>
                   <td class="td-main"><input type="text" id="nomeForm"></td>
                   <td class="td-main"><input type="text" id="horarioForm"></td>
-                  <td class="td-main"><input type="date" id="dataForm"></td>
+                  <td class="td-main"><input type="text" id="dataForm"></td>
                   <td class="td-main"><input type="text" id="nomepacienteForm"></td>
-                  <td class="td-main"><a href="#">ATUALIZAR</td>
-                  <td class="td-main"><a href="#">EXCLUIR</a></td>
+                  <td class="td-main"><a id="updateServices">ATUALIZAR</td>
+                  <td class="td-main"><a id="deleteServices">EXCLUIR</a></td>
                   <input type="submit" value="+ ADICIONAR" id="btn_ADICIONAR">
               </tr>
             </form>
