--- a/src/crudPAC/crud_PAC.html
+++ b/src/crudPAC/crud_PAC.html
@@ -101,7 +101,7 @@
               <tr>
                 <td class="td-main"><input type="text" id="cpf" maxlength="15"></td>
                 <td class="td-main"><input type="text" id="rg" maxlength="15"></td>
-                <td class="td-main"><input type="date" id="dataNascimento"></td>
+                <td class="td-main"><input type="text" id="dataNascimento"></td>
                 <td class="td-main"><input type="text" id="nome" maxlength="15"></td>
                 <td class="td-main"><input type="text" id="numeroCasa" maxlength="5"></td>
                 <td class="td-main"><input type="text" id="rua" maxlength="30"></td>
