Updates in ADM Screen

--- a/src/crudMED/crud_MED.html
+++ b/src/crudMED/crud_MED.html
@@ -36,12 +36,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Health Care</title>
-    <link rel="stylesheet" href="style.css">
     <link
       rel="icon"
       href="../../assets/Mais Brasil Logo.png"
       type="image/png"
     />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="header">
@@ -115,7 +115,7 @@
             <td class="td-main"><input type="text" id="EspecialidadeInput"></td>
             <td class="td-main"><input type="text" id="CrmInput"></td>
             <td class="td-main"><a href="#">ATUALIZAR</td>
-            <td class="td-main"><a href="#">EXCLUIR</a></td>
+            <td class="td-main"><a id="deleteServices">EXCLUIR</a></td>
             <input type="submit" value="+ ADICIONAR" id="btnADC">
           </tr>
         </table>
