--- a/src/consultsPages/home_User/home_User.html
+++ b/src/consultsPages/home_User/home_User.html
@@ -66,7 +66,7 @@
       <div id="menu-lateral">
         <div>
           <a href="#" onclick="toggleMenu(false)"
-            ><img src="../../assets/pngwing.com.png" alt="Return"
+            ><img src="../../../assets/pngwing.com.png" alt="Return"
           /></a>
           <hr />
           <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
@@ -75,7 +75,7 @@
           <hr />
           <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
           <hr />
-          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
+          <img src="../../../assets/Mais Brasil Logo.png" alt="Logo" />
         </div>
       </div>      
       </div>
