--- a/src/consultsPages/home_User/home_User.html
+++ b/src/consultsPages/home_User/home_User.html
@@ -106,16 +106,16 @@
       </div>
       <div class="buttons">
         <h2>Bem vindo! O que deseja acessar?</h2>
-        <button onclick="urlRote()" id="urlRote">
+        <button id="urlRote">
           <span class="material-symbols-outlined">
           stethoscope
           </span><br>AGENDAR CONSULTA</button>
-        <button onclick="minhaConta()">
+        <button  id="minhaConta">
           <span class="material-symbols-outlined">
           account_circle
           </span><br>MINHA CONTA</button>
 
-        <button onclick="settings()" id="settings" >
+        <button  id="settings" >
           <span class="material-symbols-outlined">
           settings
           </span><br>CONFIGURAÇÕES</button>
