--- a/src/consultsPages/minhaConta/minhaConta.html
+++ b/src/consultsPages/minhaConta/minhaConta.html
@@ -83,7 +83,7 @@
     </div>
 
     <div id="Container">
-      <!-- <div class="C-mainBox">
+      <div class="C-mainBox">
         <h1>Minha conta:</h1>
         <div class="Main-box">
           <div class="box-2">
@@ -103,7 +103,7 @@
             <p id="Nome-P">Fulano de tal</p>
             <label for="">RG:</label>
             <p id="RG-P">********</p>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
