--- a/src/crudPAC/crud_PAC.html
+++ b/src/crudPAC/crud_PAC.html
@@ -96,7 +96,6 @@
                 <td>TELEFONE</td>
                 <td>CONSULTA</td>
                 <td>AÇÃO</td>
-                <td>AÇÃO</td>
               </tr>
               <tr>
                 <td class="td-main"><input type="text" id="cpf" maxlength="15"></td>
@@ -110,8 +109,7 @@
                 <td class="td-main"><input type="text" id="cep" maxlength="10"></td>
                 <td class="td-main"><input type="text" id="telefone" maxlength="14"></td>
                 <td class="td-main"><input type="text" id="consulta" maxlength="20"></td>
-                <td class="td-main"><a href="#">ATUALIZAR</td>
-                <td class="td-main"><a href="#">EXCLUIR</a></td>
+                <td class="td-main"><a href="#" id="deleteServices">EXCLUIR</a></td>
                 <input type="submit" value="+ ADICIONAR" id="btnADC">
               </tr>
             </table>
