--- a/src/Configuracao/alterarDados/index.html
+++ b/src/Configuracao/alterarDados/index.html
@@ -71,7 +71,7 @@
           <div>
             <div id="L-1-form">
               <label for=""
-                >Nivel de relacionamento com o dono(a) desta conta:</label
+                >Selecione a conta que deseja modificar:</label
               ><br />
               <select name="" id="select-sexo" style="margin-top: 13px">
                 <option value="">Selecione:</option>
