--- a/src/Configuracao/alterarDados/loggout/index.html
+++ b/src/Configuracao/alterarDados/loggout/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <footer>
-      <img src="../../../../assets/Mais Brasil Logo.png" alt="" />
+      <img src="../../assets/Mais Brasil Logo.png" alt="" />
       <div class="feet">
         <div class="txt1">
           <h1>INICIO</h1>
@@ -99,17 +99,23 @@
         </div>
         <div class="btn_contact">
           <div class="contact">
-            <img src="../../../../assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
-              href="#"
+            <img id="footerWhatsapp" src="../../assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
+              href="https://instagram.com/cmed.especialidades"
             ></a>
-            <img
-              src="../../../../assets/Instagram_logo.png"
+
+
+            <img id="footerInstagram"
+              src="../../assets/Instagram_logo.png"
               id="Instagram"
               alt=""
-            /><a href="#"></a>
-            <img src="../../../../assets/facebook_logo.png" id="Facebook" alt="" /><a
-              href="#"
+            /><a href="https://instagram.com/cmed.especialidades"></a>
+
+
+            <img id='footerFacebook' src="../../assets/facebook_logo.png" id="Facebook" alt="" /><a
+              href="https://instagram.com/cmed.especialidades"
             ></a>
+
+
           </div>
           <button>Contato</button>
         </div>
