--- a/src/consultsPages/minhaConta/minhaConta.html
+++ b/src/consultsPages/minhaConta/minhaConta.html
@@ -134,21 +134,23 @@
         </div>
         <div class="btn_contact">
           <div class="contact">
-            <img
-              src="../../../assets/Whatsapp_logo.png"
-              id="Whatsapp"
-              alt=""
-            /><a href="#"></a>
-            <img
+            <img id="footerWhatsapp" src="../../../assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
+              href="https://instagram.com/cmed.especialidades"
+            ></a>
+
+
+            <img id="footerInstagram"
               src="../../../assets/Instagram_logo.png"
               id="Instagram"
               alt=""
-            /><a href="#"></a>
-            <img
-              src="../../../assets/facebook_logo.png"
-              id="Facebook"
-              alt=""
-            /><a href="#"></a>
+            /><a href="https://instagram.com/cmed.especialidades"></a>
+
+
+            <img id='footerFacebook' src="../../../assets/facebook_logo.png" id="Facebook" alt="" /><a
+              href="https://instagram.com/cmed.especialidades"
+            ></a>
+
+
           </div>
           <button>Contato</button>
         </div>
