--- a/src/crudSERV/crud_SERV.html
+++ b/src/crudSERV/crud_SERV.html
@@ -107,46 +107,52 @@
         </div>
       </div>
 
-    <footer>
-      <img src="../../assets/Mais Brasil Logo.png" alt="" />
-      <div class="feet">
-        <div class="txt1">
-          <h1>INICIO</h1>
-          <!-- BEBAS NEUE -->
-          <br />
-          <li>POR QUE NOS ESCOLHER ?</li>
-          <br />
-          <li>ESPECIALIDADES</li>
-          <br />
-          <li>PLANOS</li>
-        </div>
-        <div class="txt2">
-          <h1>SUPORTE</h1>
-          <br />
-          <li>FAQ</li>
-          <br />
-          <li>TELEFONE</li>
-          <br />
-          <li>CHAT</li>
-        </div>
-        <div class="btn_contact">
-          <div class="contact">
-            <img src="../../assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
-              href="#"
-            ></a>
-            <img
-              src="../../assets/Instagram_logo.png"
-              id="Instagram"
-              alt=""
-            /><a href="#"></a>
-            <img src="../../assets/facebook_logo.png" id="Facebook" alt="" /><a
-              href="#"
-            ></a>
+      <footer>
+        <img src="../../assets/Mais Brasil Logo.png" alt="" />
+        <div class="feet">
+          <div class="txt1">
+            <h1>INICIO</h1>
+            <!-- BEBAS NEUE -->
+            <br />
+            <li>POR QUE NOS ESCOLHER ?</li>
+            <br />
+            <li>ESPECIALIDADES</li>
+            <br />
+            <li>PLANOS</li>
           </div>
-          <button>Contato</button>
+          <div class="txt2">
+            <h1>SUPORTE</h1>
+            <br />
+            <li>FAQ</li>
+            <br />
+            <li>TELEFONE</li>
+            <br />
+            <li>CHAT</li>
+          </div>
+          <div class="btn_contact">
+            <div class="contact">
+              <img id="footerWhatsapp" src="../../assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
+                href="https://instagram.com/cmed.especialidades"
+              ></a>
+  
+  
+              <img id="footerInstagram"
+                src="../../assets/Instagram_logo.png"
+                id="Instagram"
+                alt=""
+              /><a href="https://instagram.com/cmed.especialidades"></a>
+  
+  
+              <img id='footerFacebook' src="../../assets/facebook_logo.png" id="Facebook" alt="" /><a
+                href="https://instagram.com/cmed.especialidades"
+              ></a>
+  
+  
+            </div>
+            <button>Contato</button>
+          </div>
         </div>
-      </div>
-    </footer>
+      </footer>
     <script src="script_SERV.js"></script>
   </body>
 </html>
