Updates in screens

--- a/src/crudMED/crud_MED.html
+++ b/src/crudMED/crud_MED.html
@@ -110,7 +110,7 @@
           <tr>
             <td class="td-main"><input type="text" id="CpfInput"></td>
             <td class="td-main"><input type="text" id="NameInput"></td>
-            <td class="td-main"><input type="date" id="DataInput"></td>
+            <td class="td-main"><input type="text" id="DataInput"></td>
             <td class="td-main"><input type="text" id="EspecialidadeInput"></td>
             <td class="td-main"><input type="text" id="CrmInput"></td>
             <td class="td-main"><a id="deleteServices">EXCLUIR</a></td>
