--- a/src/Configuracao/alterarDados/loggout/index.html
+++ b/src/Configuracao/alterarDados/loggout/index.html
@@ -99,19 +99,19 @@
         </div>
         <div class="btn_contact">
           <div class="contact">
-            <img id="footerWhatsapp" src="../../assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
+            <img id="footerWhatsapp" src="../../../../assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
               href="https://instagram.com/cmed.especialidades"
             ></a>
 
 
             <img id="footerInstagram"
-              src="../../assets/Instagram_logo.png"
+              src="../../../../assets/Instagram_logo.png"
               id="Instagram"
               alt=""
             /><a href="https://instagram.com/cmed.especialidades"></a>
 
 
-            <img id='footerFacebook' src="../../assets/facebook_logo.png" id="Facebook" alt="" /><a
+            <img id='footerFacebook' src="../../../../assets/facebook_logo.png" id="Facebook" alt="" /><a
               href="https://instagram.com/cmed.especialidades"
             ></a>
 
