--- a/src/consultsPages/dados_User/dados_User.html
+++ b/src/consultsPages/dados_User/dados_User.html
@@ -122,7 +122,7 @@
               <input type="text" id="telefone" maxlength="15" placeholder="Digite seu telefone"><br />
               <div class="inputs-inline">
                 <div>
-                  <label for="">Data de nascimento:</label>
+                  <label for="Data">Data de nascimento:</label>
                   <input type="date" id="Data" />
                 </div>
                 <div>
