--- a/src/crudMED/crud_MED.html
+++ b/src/crudMED/crud_MED.html
@@ -79,6 +79,21 @@
           <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
         </div>
       </div>
+      <div id="menu-lateral">
+        <div>
+          <a href="#" onclick="toggleMenu(false)"
+            ><img src="../../assets/pngwing.com.png" alt="Return"
+          /></a>
+          <hr />
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
+          <hr />
+          <a href="../TrabalheConosco/TrabalheConosco.html" target="_blank"><strong>Trabalhe conosco</strong></a>
+          <hr />
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
+          <hr />
+          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
+        </div>
+      </div>
     </div>
 <!--  -->
 
@@ -110,7 +125,7 @@
           <tr>
             <td class="td-main"><input type="text" id="CpfInput"></td>
             <td class="td-main"><input type="text" id="NameInput"></td>
-            <td class="td-main"><input type="text" id="DataInput"></td>
+            <td class="td-main"><input type="date" id="DataInput"></td>
             <td class="td-main"><input type="text" id="EspecialidadeInput"></td>
             <td class="td-main"><input type="text" id="CrmInput"></td>
             <td class="td-main"><a id="deleteServices">EXCLUIR</a></td>
