--- a/src/crudPAC/crud_PAC.html
+++ b/src/crudPAC/crud_PAC.html
@@ -60,10 +60,25 @@
         <div class="btn_marcarConsulta">
         </div>
       </div>
-      <div class="pai" onclick="menu()">
+      <div class="pai" onclick="toggleMenu()">
         <div class="filha"></div>
         <div class="filha"></div>
         <div class="filha"></div>
+      </div>
+      <div id="menu-lateral">
+        <div>
+          <a href="#" onclick="toggleMenu(false)"
+            ><img src="../../assets/pngwing.com.png" alt="Return"
+          /></a>
+          <hr />
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
+          <hr />
+          <a href="../TrabalheConosco/TrabalheConosco.html" target="_blank"><strong>Trabalhe conosco</strong></a>
+          <hr />
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
+          <hr />
+          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
+        </div>
       </div>
     </div>
 
@@ -100,7 +115,7 @@
               <tr>
                 <td class="td-main"><input type="text" id="cpf" maxlength="15"></td>
                 <td class="td-main"><input type="text" id="rg" maxlength="15"></td>
-                <td class="td-main"><input type="text" id="dataNascimento"></td>
+                <td class="td-main"><input type="date" id="dataNascimento"></td>
                 <td class="td-main"><input type="text" id="nome" maxlength="15"></td>
                 <td class="td-main"><input type="text" id="numeroCasa" maxlength="5"></td>
                 <td class="td-main"><input type="text" id="rua" maxlength="30"></td>
