--- a/src/crudSERV/crud_SERV.html
+++ b/src/crudSERV/crud_SERV.html
@@ -59,10 +59,25 @@
         <div class="btn_marcarConsulta">
         </div>
       </div>
-      <div class="pai" onclick="menu()">
+      <div class="pai" onclick="toggleMenu()">
         <div class="filha"></div>
         <div class="filha"></div>
         <div class="filha"></div>
+      </div>
+      <div id="menu-lateral">
+        <div>
+          <a href="#" onclick="toggleMenu(false)"
+            ><img src="../../assets/pngwing.com.png" alt="Return"
+          /></a>
+          <hr />
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
+          <hr />
+          <a href="../TrabalheConosco/TrabalheConosco.html" target="_blank"><strong>Trabalhe conosco</strong></a>
+          <hr />
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
+          <hr />
+          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
+        </div>
       </div>
     </div>
 
@@ -93,7 +108,7 @@
               <tr>
                   <td class="td-main"><input type="text" id="nomeForm"></td>
                   <td class="td-main"><input type="text" id="horarioForm"></td>
-                  <td class="td-main"><input type="text" id="dataForm"></td>
+                  <td class="td-main"><input type="date" id="dataForm"></td>
                   <td class="td-main"><input type="text" id="nomepacienteForm"></td>
                   <td class="td-main"><a id="deleteServices">EXCLUIR</a></td>
                   <input type="submit" value="+ ADICIONAR" id="btn_ADICIONAR">
