--- a/src/consultsPages/minhaConta/minhaConta.html
+++ b/src/consultsPages/minhaConta/minhaConta.html
@@ -83,7 +83,7 @@
     </div>
 
     <div id="Container">
-      <div class="C-mainBox">
+      <div class="C-mainBox" id="mainBox">
         <h1>Minha conta:</h1>
         <div class="Main-box">
           <div class="box-2">
