fix bugs in hidden button

--- a/src/singUpPage/singUp.html
+++ b/src/singUpPage/singUp.html
@@ -84,7 +84,6 @@
 
     <div id="Container">
       <form id="Formulario" method="POST" action="/User/Insert">
-        <!-- LEAGUE SPARTAN -->
         <h2 id="login">FAÇA SEU CADASTRO:</h2>
         <div class="icons">
           <span class="material-symbols-outlined"> person </span>
@@ -95,27 +94,28 @@
           <input
             type="password"
             name="password"
-            id="password"
+            class="password"
             placeholder="Senha:"
             required
           />
-          <span class="lnr lnr-eye"></span>
+          <span class="lnr lnr-eye-1"><img src="../../assets/fechar-o-olho.png" alt="hidden" style="height: 20px;"></span>
         </div>
         <div class="icons">
           <span class="material-symbols-outlined"> lock </span>
           <input
             type="password"
             name="password"
-            id="password"
+            class="password2"
             placeholder="Confirme sua senha:"
             required
           />
-          <span class="lnr lnr-eye"></span>
+          <span class="lnr lnr-eye-2"><img src="../../assets/olho.png" alt="hiddenconfirmation"  style="height: 20px";></span>
         </div>
-        <a href="../loginPage/index.html">Já tem uma conta ? Faça login !</a>
-
+        <a href="../loginPage/index.html">Já tem uma conta? Faça login!</a>
+      
         <input type="submit" name="btn" id="btn" value="CADASTRAR" />
       </form>
+      
     </div>
 
     <div id="imagem"></div>
