Fix eyes in inputs

--- a/src/singUpPage/singUp.html
+++ b/src/singUpPage/singUp.html
@@ -94,22 +94,22 @@
           <input
             type="password"
             name="password"
-            class="password"
+            id="password"
             placeholder="Senha:"
             required
           />
-          <span class="lnr lnr-eye-1"><img src="../../assets/fechar-o-olho.png" alt="hidden" style="height: 20px;"></span>
+          <span class="lnr lnr-eye"></span>
         </div>
         <div class="icons">
           <span class="material-symbols-outlined"> lock </span>
           <input
             type="password"
             name="password"
-            class="password2"
+            id="password1"
             placeholder="Confirme sua senha:"
             required
           />
-          <span class="lnr lnr-eye-2"><img src="../../assets/olho.png" alt="hiddenconfirmation"  style="height: 20px";></span>
+          <span class="lnr lnr-eye"></span>
         </div>
         <a href="../loginPage/index.html">Já tem uma conta? Faça login!</a>
       
