Fix update data screen

--- a/src/Configuracao/alterarDados/index.html
+++ b/src/Configuracao/alterarDados/index.html
@@ -70,54 +70,53 @@
           <h2>DADOS DO PACIENTE:</h2>
           <div>
             <div id="L-1-form">
-              <label for=""
-                >Selecione a conta que deseja modificar:</label
-              ><br />
-              <select name="" id="select-sexo" style="margin-top: 13px">
+              <label for="select-sexo">Selecione a conta que deseja modificar:</label><br />
+              <select name="select-sexo" id="select-sexo" style="margin-top: 13px">
                 <option value="">Selecione:</option>
-                <option value="">Amigo(a)</option>
-                <option value="">Parente(a)</option>
-                <option value="">Filho(a)</option></select
-              ><br />
-              <label for="">Nome do paciente:</label><br />
+                <option value="Amigo(a)">Amigo(a)</option>
+                <option value="Parente(a)">Parente(a)</option>
+                <option value="Filho(a)">Filho(a)</option>
+              </select><br />
+              <label for="input-nome">Nome do paciente:</label><br />
               <input type="text" id="input-nome" placeholder="Digite o nome do paciente:"/><br />
-              <label for="">Registro geral (RG):</label><br />
+              <label for="RG">Registro geral (RG):</label><br />
               <input type="text" id="RG" placeholder="Digite seu RG:"/><br />
-              <label for="" >Cadastro de pessoa física (CPF):</label><br />
+              <label for="CPF">Cadastro de pessoa física (CPF):</label><br />
               <input type="text" id="CPF" maxlength="14" placeholder="Digite seu CPF:"/><br />
-              <label for="">Telefone:</label><br />
+              <label for="telefone">Telefone:</label><br />
               <input type="text" id="telefone" maxlength="15" placeholder="Digite seu telefone"><br />
               <div class="inputs-inline">
                 <div>
-                  <label for="">Data de nascimento:</label>
+                  <label for="Data">Data de nascimento:</label>
                   <input type="date" id="Data" />
                 </div>
                 <div>
-                  <label for="">Sexo:</label>
+                  <label for="select-sexo1">Sexo:</label>
                   <select id="select-sexo1">
                     <option value="">Selecione:</option>
-                    <option value="">Masculino</option>
-                    <option value="">Feminino</option>
-                    <option value="">Outro</option>
+                    <option value="Masculino">Masculino</option>
+                    <option value="Feminino">Feminino</option>
+                    <option value="Outro">Outro</option>
                   </select>
-                </div>  
+                </div>
               </div>
             </div>
             <div id="L-2-form">
-              <label for="">CEP:</label><br />
+              <label for="CEP">CEP:</label><br />
               <input type="text" id="CEP" placeholder="Digite o seu CEP:"/><br />
-              <label for="">Cidade:</label><br />
+              <label for="cidade">Cidade:</label><br />
               <input type="text" id="cidade" placeholder="Digite o nome da sua cidade:"/><br />
-              <label for="">Bairro:</label><br />
+              <label for="bairro">Bairro:</label><br />
               <input type="text" id="bairro" placeholder="Digite o nome do seu bairro:"/><br />
-              <label for="">Rua:</label><br />
+              <label for="rua">Rua:</label><br />
               <input type="text" id="rua" placeholder="Digite o nome da sua rua:"/><br />
-              <label for="">Numero da casa:</label><br />
+              <label for="numero-casa">Numero da casa:</label><br />
               <input type="text" id="numero-casa" placeholder="Digite o número da casa:"/><br />
             </div>
           </div>
           <input type="submit" name="AVANÇAR" id="urlRote_2" value="AVANÇAR" />
         </form>
+        
       </div>
     </div>
 
