--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </div>
 
     <footer>
-      <img src="../../assets/Mais Brasil Logo.png" alt="" />
+      <img src="./assets/Mais Brasil Logo.png" alt="" />
       <div class="feet">
         <div class="txt1">
           <h1>INICIO</h1>
@@ -202,19 +202,19 @@
         </div>
         <div class="btn_contact">
           <div class="contact">
-            <img id="footerWhatsapp" src="../../assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
+            <img id="footerWhatsapp" src="./assets/Whatsapp_logo.png" id="Whatsapp" alt="" /><a
               href="https://instagram.com/cmed.especialidades"
             ></a>
 
 
             <img id="footerInstagram"
-              src="../../assets/Instagram_logo.png"
+              src="./assets/Instagram_logo.png"
               id="Instagram"
               alt=""
             /><a href="https://instagram.com/cmed.especialidades"></a>
 
 
-            <img id='footerFacebook' src="../../assets/facebook_logo.png" id="Facebook" alt="" /><a
+            <img id='footerFacebook' src="./assets/facebook_logo.png" id="Facebook" alt="" /><a
               href="https://instagram.com/cmed.especialidades"
             ></a>
 
