--- a/src/ContateNos/ContateNos.html
+++ b/src/ContateNos/ContateNos.html
@@ -92,7 +92,7 @@
     <div id="Container">
       <div class="img">
         <img
-          src="../../assets/sobrenos.png"
+          src="../../assets/contato.png"
           style="height: 70.5vh; width: 100%; opacity: calc(95%);"
           alt=""
         /><br />
