--- a/src/crudMED/crud_MED.html
+++ b/src/crudMED/crud_MED.html
@@ -121,6 +121,7 @@
             <td>ESPECIALIDADES</td>
             <td>CRM</td>
             <td>AÇÃO</td>
+            <td>AÇÃO</td>
           </tr>
           <tr>
             <td class="td-main"><input type="text" id="CpfInput"></td>
@@ -129,6 +130,7 @@
             <td class="td-main"><input type="text" id="EspecialidadeInput"></td>
             <td class="td-main"><input type="text" id="CrmInput"></td>
             <td class="td-main"><a id="deleteServices">EXCLUIR</a></td>
+            <td class="td-main"><a id="updateServices">PAGINA DE ATUALIZAR</a></td>
             <input type="submit" value="+ ADICIONAR" id="btnADC">
           </tr>
         </table>
