--- a/src/crudSERV/crud_SERV.html
+++ b/src/crudSERV/crud_SERV.html
@@ -104,6 +104,7 @@
                 <td>DATA</td>
                 <td>NOME DO PACIENTE</td>
                 <td>AÇÃO</td>
+                <td>AÇÃO</td>
               </tr>
               <tr>
                   <td class="td-main"><input type="text" id="nomeForm"></td>
@@ -111,6 +112,7 @@
                   <td class="td-main"><input type="date" id="dataForm"></td>
                   <td class="td-main"><input type="text" id="nomepacienteForm"></td>
                   <td class="td-main"><a id="deleteServices">EXCLUIR</a></td>
+                  <td class="td-main"><a id="updateServices">PAGINA DE ATUALIZAR</a></td>
                   <input type="submit" value="+ ADICIONAR" id="btn_ADICIONAR">
               </tr>
             </form>
