--- a/src/crudPAC/crud_PAC.html
+++ b/src/crudPAC/crud_PAC.html
@@ -111,6 +111,7 @@
                 <td>TELEFONE</td>
                 <td>CONSULTA</td>
                 <td>AÇÃO</td>
+                <td>AÇÃO</td>
               </tr>
               <tr>
                 <td class="td-main"><input type="text" id="cpf" maxlength="15"></td>
@@ -125,6 +126,7 @@
                 <td class="td-main"><input type="text" id="telefone" maxlength="14"></td>
                 <td class="td-main"><input type="text" id="consulta" maxlength="20"></td>
                 <td class="td-main"><a href="#" id="deleteServices">EXCLUIR</a></td>
+                <td class="td-main"><a id="updateServices">PAGINA DE ATUALIZAR</a></td>
                 <input type="submit" value="+ ADICIONAR" id="btnADC">
               </tr>
             </table>
