added return button in menus

--- a/src/Configuracao/alterarDados/index.html
+++ b/src/Configuracao/alterarDados/index.html
@@ -65,7 +65,7 @@
       <div id="menu-lateral">
         <div>
           <a href="#" onclick="toggleMenu(false)"
-            ><img src="../../../assets/pngwing.com.png" alt="Return"
+            ><img src="../../../assets/ReturnButton.png" alt="Return"
           /></a>
           <hr />
           <a href="../../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
