--- a/src/consultsPages/horario_User/horarios_User.html
+++ b/src/consultsPages/horario_User/horarios_User.html
@@ -68,7 +68,7 @@
       <div id="menu-lateral">
         <div>
           <a href="#" onclick="toggleMenu(false)"
-            ><img src="../../assets/pngwing.com.png" alt="Return"
+            ><img src="../../.././assets/ReturnButton.png" alt="Return"
           /></a>
           <hr />
           <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
@@ -77,7 +77,7 @@
           <hr />
           <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
           <hr />
-          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
+          <img src="../../../assets/Mais Brasil Logo.png" alt="Logo" />
         </div>
       </div>
     </div>
