--- a/src/consultsPages/dados_User/dados_User.html
+++ b/src/consultsPages/dados_User/dados_User.html
@@ -61,7 +61,7 @@
       <div id="menu-lateral">
         <div>
           <a href="#" onclick="toggleMenu(false)"
-            ><img src="../../assets/pngwing.com.png" alt="Return"
+            ><img src="../../.././assets/ReturnButton.png" alt="Return"
           /></a>
           <hr />
           <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
@@ -70,11 +70,10 @@
           <hr />
           <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
           <hr />
-          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
+          <img src="../../../assets/Mais Brasil Logo.png" alt="Logo" />
         </div>
       </div>
     </div>
-
     <div id="Container">
       <div class="trajeto">
         <div class="rota-main"></div>
