Added contact links in footer

--- a/src/crudPAC/crud_PAC.html
+++ b/src/crudPAC/crud_PAC.html
@@ -172,10 +172,10 @@
                 alt=""
               /><a href="https://instagram.com/cmed.especialidades"></a>
   
-  
               <img id='footerFacebook' src="../../assets/facebook_logo.png" id="Facebook" alt="" /><a
-                href="https://instagram.com/cmed.especialidades"
-              ></a>
+              href="https://www.facebook.com/profile.php?id=100090094286048"
+            ></a>
+
   
   
             </div>
