--- a/index.html
+++ b/index.html
@@ -213,8 +213,9 @@
             /><a href="https://instagram.com/cmed.especialidades"></a>
 
 
-            <img id='footerFacebook' src="./assets/facebook_logo.png" id="Facebook" alt="" /><a
-              href="https://instagram.com/cmed.especialidades"
+            <img id='footerFacebook' src="./assets/facebook_logo.png" id="Facebook" alt="" />
+            <a
+              href="https://www.facebook.com/profile.php?id=100090094286048"
             ></a>
 
 
