--- a/src/Configuracao/alterarDados/index.html
+++ b/src/Configuracao/alterarDados/index.html
@@ -172,9 +172,8 @@
 
 
             <img id='footerFacebook' src="../../../assets/facebook_logo.png" id="Facebook" alt="" /><a
-              href="https://instagram.com/cmed.especialidades"
-            ></a>
-
+            href="https://www.facebook.com/profile.php?id=100090094286048"
+          ></a> 
 
           </div>
           <button>Contato</button>
