--- a/src/consultsPages/especialidades_User/especialidades.html
+++ b/src/consultsPages/especialidades_User/especialidades.html
@@ -161,7 +161,7 @@
 
 
             <img id='footerFacebook' src="../../../assets/facebook_logo.png" id="Facebook" alt="" /><a
-              href="https://instagram.com/cmed.especialidades"
+              href="https://www.facebook.com/profile.php?id=100090094286048"
             ></a>
 
 
