--- a/src/consultsPages/minhaConta/minhaConta.html
+++ b/src/consultsPages/minhaConta/minhaConta.html
@@ -145,9 +145,8 @@
               alt=""
             /><a href="https://instagram.com/cmed.especialidades"></a>
 
-
             <img id='footerFacebook' src="../../../assets/facebook_logo.png" id="Facebook" alt="" /><a
-              href="https://instagram.com/cmed.especialidades"
+              href="https://www.facebook.com/profile.php?id=100090094286048"
             ></a>
 
 
