--- a/src/sobreNos/ContateNos.html
+++ b/src/sobreNos/ContateNos.html
@@ -79,7 +79,7 @@
             ><img src="../../assets/ReturnButton.png" alt="Return"
           /></a>
           <hr />
-          <a href="../sobreNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
           <hr />
           <a href="../TrabalheConosco/TrabalheConosco.html" target="_blank"><strong>Trabalhe conosco</strong></a>
           <hr />
@@ -92,7 +92,7 @@
     <div id="Container">
       <div class="img">
         <img
-          src="../../assets/contato.png"
+          src="../../assets/sobrenos.png"
           style="height: 70.5vh; width: 100%; opacity: calc(95%);"
           alt=""
         /><br />
